redactable/tests/ui/not_sensitive_display_sensitive_rejected.stderr
error: `#[sensitive]` attributes are not allowed on `NotSensitiveDisplay` types
 --> tests/ui/not_sensitive_display_sensitive_rejected.rs:8:5
  |
8 |     #[sensitive(redactable::Secret)]
  |     ^
